ubuntu-dev-tools (0.137) UNRELEASED; urgency=low

  * mk-sbuild: Make --eatmydata command line flag actually work.
  * Remove dgetlp. No longer needed.
  * Use httplib2 everywhere that we do https. The python stdlib doesn't do
    certificate verification.
  * requestbackport:
    - Check for existing backport bugs first.
    - Check that there are published binaries (i.e. not stuck in bin-NEW).
  * pull-lp-source, requestbackport: Take the latest version from any
    non-backports pocket. Implemented by making lpapicache's getSourcePackage
    smarter.
  * sponsor-patch: Build a source package for lintian to run on, when not
    test-building syncs.
  * sponsor-patch: Check the bug's title, not the task, when determining
    source series for syncs.

 -- Stefano Rivera <stefanor@debian.org>  Mon, 21 Nov 2011 09:47:00 +0200

ubuntu-dev-tools (0.136) unstable; urgency=low

  [ Marc Deslauriers ]
  * mk-sbuild,doc/mk-sbuild.1: switch from aufs to overlayfs, as aufs is no
    longer in the Precise kernel.

  [ Stefano Rivera ]
  * mk-sbuild,doc/mk-sbuild.1: aufs may still be used if overlayfs isn't
    available (as is the case on Debian).
  * mk-sbuild: debootstrap with all components, so that eatmydata can be
    installed.
  * EditFile: Don't try and store temporary files in /usr/bin.
  * EditBugReport: Don't include a newline in the bug title.

 -- Stefano Rivera <stefanor@debian.org>  Wed, 16 Nov 2011 14:33:04 +0200

ubuntu-dev-tools (0.135) unstable; urgency=low

  * grab-merge: Use wget -nv rather than -q, so that we see error messages
    (LP: #881967)
  * requestsync: Make --lp the default.
  * submittodebian: Use prettier patch filenames (LP: #887333)
  * mk-sbuild:
    -Allow creating experimental chroots again (LP: #885499)
    - experimental shouldn't be the default in experimental chroots.
    - Add --eatmydata flag (LP: #888440)
  * pbuilder-dist:
    - Support using non-master mirrors. Thanks Mathieu Parent. (LP: #824285)